Very rudimentary executor from source code (ANTLR -> AST).  Currently can only delegate to Java System.println( ) with a String.  Much work remaining to lookup state variables in hierarchical namespace and to make recursive function (action) calls with return value handling.

--- a/space-core/src/main/ref/roml/lang/roml_dtd.dtd
+++ b/space-core/src/main/ref/roml/lang/roml_dtd.dtd
@@ -12,7 +12,7 @@
 <!ATTLIST domain %model-element.attrs; >
 
 <!--  -->
-<!ELEMENT model-defn (model-defn*, data-source*, domain*, type-defn*, equation-defn*,
+<!ELEMENT model-defn (model-defn*, data-source*, domain*, defn-defn*, equation-defn*,
                       transform-defn*, action-sequence-defn*, action-defn*, state-machine-defn*)>
 <!ATTLIST model-defn %model-element.attrs; >
 
@@ -29,7 +29,7 @@
 <!--  -->
 <!ENTITY % relation-defn.attrs
        'name    CDATA    #REQUIRED
-        type    CDATA    #REQUIRED'>
+        defn    CDATA    #REQUIRED'>
 <!ELEMENT relation-defn (relation-defn-expr)>
 <!ATTLIST relation-defn %model-element.attrs; %relation-defn.attrs;>
 
