--- a/space-core/src/main/ref/roml/lang/roml-roml.xml
+++ b/space-core/src/main/ref/roml/lang/roml-roml.xml
@@ -130,7 +130,7 @@
   </model-defn>
 
   <!--
-    Define rdb notions on top of ROML.  This is the 'schema' to which any 
+    Define rdb notions on top of ROML.  This is the 'directory' to which any
   -->
   <model-defn code-name="generic-rdb-model">
     <domain-defn code-name="code-name" defn="char" size="64"/>
